Full Setup for the Game

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -13,6 +13,27 @@ program.menu.file.restart=Neustart
 program.menu.file.exit=Ende
 program.menu.client=Client
 program.menu.clientGUI=Client View anzeigen
+program.menu.file.lobby=Lobby
+program.menu.file.login=Login
+program.menu.file.friends=Freunde
+program.menu.file.mainmenu=Haupt Menu
+
+#Friends Menu
+friends.menu.file=Datei
+friends.menu.file.addfriends=Freunde Hinzufügen
+friends.menu.file.exit=Ende
+
+#Lobby
+lobby.menu.file=Datei
+lobby.menu.file.exit=Ende
+
+#Login
+login.menu.file=Datei
+login.menu.file.exit=Ende
+
+#MainMenu
+mainmenu.menu.file=Datei
+mainmenu.menu.file.exit=Ende
 
 # Buttons
 
