--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -13,6 +13,27 @@ program.menu.file.restart=Restart
 program.menu.file.exit=Exit
 program.menu.client=Client
 program.menu.clientGUI=Get Client View
+program.menu.file.lobby=Lobby
+program.menu.file.login=Login
+program.menu.file.friends=Friends
+program.menu.file.mainmenu=Main Menu
+
+#Friends Menu
+friends.menu.file=File
+friends.menu.file.addfriends=Add Friends
+friends.menu.file.exit=Exit
+
+#Lobby
+lobby.menu.file=File
+lobby.menu.file.exit=Exit
+
+#Login
+login.menu.file=File
+login.menu.file.exit=Exit
+
+#MainMenu
+mainmenu.menu.file=File
+mainmenu.menu.file.exit=Exit
 
 # Buttons
 
