Add the AddFriendsMenu

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -22,6 +22,8 @@ program.menu.file.mainmenu=Haupt Menu
 friends.menu.file=Datei
 friends.menu.file.addfriends=Freunde Hinzufügen
 friends.menu.file.exit=Ende
+addfriends.menu.file=Datei
+addfriends.menu.file.exit=Ende
 
 #Lobby
 lobby.menu.file=Datei
