--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -22,6 +22,8 @@ program.menu.file.mainmenu=Main Menu
 friends.menu.file=File
 friends.menu.file.addfriends=Add Friends
 friends.menu.file.exit=Exit
+addfriends.menu.file=File
+addfriends.menu.file.exit=Exit
 
 #Lobby
 lobby.menu.file=File
