New Menu: AI Controller

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -17,6 +17,29 @@ program.menu.file.lobby=Lobby
 program.menu.file.login=Login
 program.menu.file.friends=Freunde
 program.menu.file.mainmenu=Haupt Menu
+program.menu.AI=KI Einstellungen
+program.menu.file.AI=KI Einstellungen
+
+#AI Menu
+AI.menu.file=Datei
+AI.menu.file.exit=Ende
+
+#AI Labels
+lblWeightWin=Gewinnen Gewichtung:
+lblWeightSumoBlock=Sumo Block Gewichtung:
+lblWieghtSumoWin=Sumo Win Gewichtung:
+lblWeightBlock=Blockieren Gewichtung:
+lblWeightMoves=Möglichkeiten Gewichtung:
+lblWeightProgress=Fortschritt Gewichtung:
+lblPlayerONE=Spieler eins
+lblPlayerTWO=Spieler zwei
+
+#AI Buttons
+btnSinglePlayer = Einzelspieler
+btnMultiPlayer = Doppelte KI
+
+#AI CheckBox
+cb=Einzelspieler?
 
 #Friends Menu
 friends.menu.file=Datei
