--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -17,6 +17,29 @@ program.menu.file.lobby=Lobby
 program.menu.file.login=Login
 program.menu.file.friends=Friends
 program.menu.file.mainmenu=Main Menu
+program.menu.AI=AI Controller
+program.menu.file.AI=AI Controller
+
+#AI Menu
+AI.menu.file=File
+AI.menu.file.exit=Exit
+
+#AI CheckBox
+cb=Singel Player?
+
+#AI Labels
+lblWeightWin=Win Weight:
+lblWeightSumoBlock=Sumo Block Weight:
+lblWieghtSumoWin=Sumo Win Weight:
+lblWeightBlock=Block Weight:
+lblWeightMoves=Moves Weight:
+lblWeightProgress=Progress Weight:
+lblPlayerONE=Player one
+lblPlayerTWO=Player two
+
+#AI Buttons
+btnSinglePlayer=Single Player
+btnMultiPlayer=Double AI
 
 #Friends Menu
 friends.menu.file=File
