Login first - also a little logic

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -56,6 +56,11 @@ lobby.menu.file.exit=Ende
 login.menu.file=Datei
 login.menu.file.exit=Ende
 
+#LoginButton
+btnLogin=Einloggen
+btnCreateUser=Spieler erstellen
+CheckUserName=Name überprüfen
+
 #MainMenu
 mainmenu.menu.file=Datei
 mainmenu.menu.file.exit=Ende
