--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -56,6 +56,11 @@ lobby.menu.file.exit=Exit
 login.menu.file=File
 login.menu.file.exit=Exit
 
+#Button Login
+btnLogin=Login
+btnCreateUser=Create User
+CheckUserName=Check Name
+
 #MainMenu
 mainmenu.menu.file=File
 mainmenu.menu.file.exit=Exit
