New Menus - new Logic - new DB

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -58,12 +58,31 @@ login.menu.file.exit=Ende
 
 #LoginButton
 btnLogin=Einloggen
-btnCreateUser=Spieler erstellen
-CheckUserName=Name überprüfen
+btnUserMenu=Spieler Menu
+btnRefresh=Aktualisieren
 
 #MainMenu
 mainmenu.menu.file=Datei
 mainmenu.menu.file.exit=Ende
+
+#MainMenu Button
+btnStartGame=Spiel starten
+
+#UserMenu
+menuFileUserMenu=Datei
+menuFileExitUserMenu=Ende
+
+#UserMenu Buttons
+btnChangeUser=Ändern
+btnCreateUser=Erstellen
+btnDeleteUser=Löschen
+btnSearchUser=Suchen
+
+#UserMenu Labels
+lblPreName=Vorname
+lblSurName=Nachname
+lblWinsDis=Gewonnen
+lblIdDis=Id
 
 # Buttons
 
