--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -58,12 +58,31 @@ login.menu.file.exit=Exit
 
 #Button Login
 btnLogin=Login
-btnCreateUser=Create User
-CheckUserName=Check Name
+btnUserMenu=User Menu
+btnRefresh=Refresh
 
 #MainMenu
 mainmenu.menu.file=File
 mainmenu.menu.file.exit=Exit
+
+#MainMenu Button
+btnStartGame=Start Game
+
+#UserMenu
+menuFileUserMenu=File
+menuFileExitUserMenu=Exit
+
+#UserMenu Buttons
+btnChangeUser=Change
+btnCreateUser=Create
+btnDeleteUser=Delete
+btnSearchUser=Search
+
+#UserMenu Labels
+lblPreName=Prename
+lblSurName=Surname
+lblWinsDis=Wins
+lblIdDis=Id
 
 # Buttons
 
