Fixed some bugs

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -83,6 +83,24 @@ lblPreName=Vorname
 lblSurName=Nachname
 lblWinsDis=Gewonnen
 lblIdDis=Id
+lblnewUser=Neuer Benutzer
+lblUserNameDis=Benutzername
+
+#UserMenu TextField
+txtPreNameEnter=Neuer Vorname
+txtSurNameEnter=Neuer Nachname
+txtUserNameEnter=Neuer Username
+pwfPasswordEnter=Neues Passwort
+pwfOldPassword=Altes Passwort
+
+#Client Labels
+lblIP=Adresse
+lblPort=Port
+lblremind=Erinnern an Verbindung  
+
+#Client Buttons
+btnGo=Verbinden
+btnSendOther=Senden
 
 # Buttons
 
