--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -83,8 +83,24 @@ lblPreName=Prename
 lblSurName=Surname
 lblWinsDis=Wins
 lblIdDis=Id
+lblnewUser=New User
+lblUserNameDis=Username
 
-# Buttons
+#UserMenu TextField
+txtPreNameEnter=New Prename
+txtSurNameEnter=New Surname
+txtUserNameEnter=New Username
+pwfPasswordEnter=New Password
+pwfOldPassword=Old Password
+
+#Client Labels
+lblIP=IP
+lblPort=Port
+lblremind=Remind this session  
+
+#Client Buttons
+btnGo=Go
+btnSendOther=Send
 
 # Labels
 
