New Style new Logic

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -19,6 +19,8 @@ program.menu.file.friends=Freunde
 program.menu.file.mainmenu=Haupt Menu
 program.menu.AI=KI Einstellungen
 program.menu.file.AI=KI Einstellungen
+usermenu.menu.file=Datei
+usermenu.menu.file.exit=Ende
 
 #AI Menu
 AI.menu.file=Datei
@@ -77,6 +79,7 @@ btnChangeUser=Ändern
 btnCreateUser=Erstellen
 btnDeleteUser=Löschen
 btnSearchUser=Suchen
+btnGetAll=Alle suchen
 
 #UserMenu Labels
 lblPreName=Vorname
@@ -85,6 +88,8 @@ lblWinsDis=Gewonnen
 lblIdDis=Id
 lblnewUser=Neuer Benutzer
 lblUserNameDis=Benutzername
+lblChange=Benutzer ändern
+lblSearch=Benutzer suchen
 
 #UserMenu TextField
 txtPreNameEnter=Neuer Vorname
