--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -19,6 +19,8 @@ program.menu.file.friends=Friends
 program.menu.file.mainmenu=Main Menu
 program.menu.AI=AI Controller
 program.menu.file.AI=AI Controller
+usermenu.menu.file=File
+usermenu.menu.file.exit=Exit
 
 #AI Menu
 AI.menu.file=File
@@ -77,6 +79,7 @@ btnChangeUser=Change
 btnCreateUser=Create
 btnDeleteUser=Delete
 btnSearchUser=Search
+btnGetAll=Search All
 
 #UserMenu Labels
 lblPreName=Prename
@@ -85,6 +88,8 @@ lblWinsDis=Wins
 lblIdDis=Id
 lblnewUser=New User
 lblUserNameDis=Username
+lblChange=Change User
+lblSearch=Search User
 
 #UserMenu TextField
 txtPreNameEnter=New Prename
