New Login-Logic and Testclasses

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -90,6 +90,7 @@ lblnewUser=Neuer Benutzer
 lblUserNameDis=Benutzername
 lblChange=Benutzer ändern
 lblSearch=Benutzer suchen
+lblUserName=Benutzername
 
 #UserMenu TextField
 txtPreNameEnter=Neuer Vorname
