--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -90,6 +90,7 @@ lblnewUser=New User
 lblUserNameDis=Username
 lblChange=Change User
 lblSearch=Search User
+lblUserName=Username
 
 #UserMenu TextField
 txtPreNameEnter=New Prename
