--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -21,6 +21,7 @@ program.menu.AI=KI Einstellungen
 program.menu.file.AI=KI Einstellungen
 usermenu.menu.file=Datei
 usermenu.menu.file.exit=Ende
+program.menu.help.tutorial=Einführung
 
 #AI Menu
 AI.menu.file=Datei
@@ -107,6 +108,16 @@ lblremind=Erinnern an Verbindung
 #Client Buttons
 btnGo=Verbinden
 btnSendOther=Senden
+
+#Tutorial
+menuFileExitTutorialMenu=Exit
+menuFileTutorialMenu=File
+welcome=Willkommen im Tutorial
+description=In diesem Tutorial erfahren Sie wie das Spiel funktioniert und wie sie es bedienen können. Wir wünschen Ihnen viel Spass
+btnOk=Ok
+btnBasicRules=Standard Regeln
+btnLongPlay= Langes Spiel
+btnMarathonPlay=Marathon Spiel
 
 # Buttons
 
