--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -21,6 +21,7 @@ program.menu.AI=AI Controller
 program.menu.file.AI=AI Controller
 usermenu.menu.file=File
 usermenu.menu.file.exit=Exit
+program.menu.help.tutorial=Tutorial
 
 #AI Menu
 AI.menu.file=File
@@ -107,6 +108,16 @@ lblremind=Remind this session
 #Client Buttons
 btnGo=Go
 btnSendOther=Send
+
+#Tutorial
+menuFileExitTutorialMenu=Exit
+menuFileTutorialMenu=File
+welcome=Welcome to the Tutorial
+description=In this tutorial, you will learn how the game works and how to use it. We wish you a lot of fun
+btnOk=Ok
+btnBasicRules=Basic Rules
+btnLongPlay= Long Play
+btnMarathonPlay=Marathon Play
 
 # Labels
 
