--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -119,6 +119,22 @@ btnBasicRules=Standard Regeln
 btnLongPlay= Langes Spiel
 btnMarathonPlay=Marathon Spiel
 
+#Normal Play
+lblHeader=Standard Spiel
+sBody1=Gewinner des Standard-Spiels ist, wer als erster 3 Punkte erreicht.\nDas Spiel verläuft nach den Grundregeln. Ab dem Ende der ersten Partie gelten zwei wichtige Änderungen:
+sBody2=Der Gewinner einer Partie left auf den Turm, mit dem er die gegnerische Grundline erreichen konnte,\neinen Drachenzahn-Marker. Dieser Turm ist ab jetzt ein Sumo-Drachenturm, kurz Sumo.\nIn fogenden Partien kann ein Sumo nicht mehr beliebig weit gezogen werden,\nhat dafür aber die Möglichkeit einen "Sumo-Stoss"-Zug durchzuführen.
+
+#LongPlay
+lblHeaderLong=Long Spiel
+sBodyLong1=Gewinner des langen Spiels ist, wer als erster 7 Punkte erreicht.\nDas Spiel verläuft nach den Grundlregeln. Ab dem Ende der ersten Partei gelten zwei wichtige Änderungen:
+sBodyLong2=Ein Sumo oder Doppel-Sumo ist geboren! Der Gewinner einer Partei\nlegt auf den Turm, mit dem er die gegnerische Grundlinie erreichen konnte, einen Drachenzahn-Marker.\nDieser Turm ist ab jetzt ein Sumo. Bekommt ein Sumo auf diese Weise seinen zweiten Drachenzahn-Marker,\ndannist er fortan ein Doppel-Sumo\n\nEs gelten die Regeln wie im Abschnitt "Das Standard Spiel" beschrieben.\nDer Verteigier entscheidet, ob von links oder von rechts besetzt werden muss.
+
+#MarathonPlay
+lblHeaderMarathon=Marathon Spiel
+sBodyMarathon1=Gewinner des Marathon-Spiels ist, wer als erster 15 Punkte erreicht.\nDas Spiel verläuft nach den Grundregeln. Ab dem Ende der ersten Partie gelten zwei wichtige Änderungen:
+sBodyMarathon2=Bekommt ein Doppel-Sumo (siehe auch Das Lange Spiel) wird zum Dreifach-Sumo\nwenn er einen weiteren Drachenzahn-Marker erhält.\n\nEs gelten die Regeln wie im Abschnitt "Das Standard Spiel" beschrieben.\nDer Verteigier entscheidet, ob von links oder von rechts besetzt werden muss.
+
+
 # Buttons
 
 # Labels
