--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -119,6 +119,21 @@ btnBasicRules=Basic Rules
 btnLongPlay= Long Play
 btnMarathonPlay=Marathon Play
 
+#Normal Play
+lblHeader=Standard Play
+sBody1=Winner of the standard game is who is the first to score 3 points.\nThe game goes according to the basic rules. From the end of the first game there are two important changes:
+sBody2=The winner of a game left on the tower with which he could reach the enemy base line,\na dragon-tooth marker. This tower is from now on a sumo dragon tower, short sumo.\nIn summing lots a sumo can no longer be drawn as far as possible, but it has the possibility to perform a sumo stroke.
+
+#LongPlay
+lblHeaderLong=Long Play
+sBodyLong1=The winner of the long game is the first to score 7 points.\nThe game goes according to the basic rules. There are two important changes from the end of the first party:
+sBodyLong2=A sumo or double sumo is born! The winner of a party\nto the tower with which he could reach the opposing base line, a dragon-tooth marker.\nThis tower is now a Sumo. If a sumo gets his second dragon-tooth marker in this way, he is a double-sumo.\n\nThere are rules as described in the section "The default game".\nThe defender decides whether to be occupied from the left or from the right got to.
+
+#MarathonPlay
+lblHeaderMarathon=Marathon Play
+sBodyMarathon1=The winner of the marathon game is the first to score 15 points.\nThe game goes according to the basic rules. From the end of the first game there are two important changes:
+sBodyMarathon2=If the double-sumo is added to the Triple-Sumo, it will be added to the Triple-Sumo.\n\nThere are rules as described in the "Standard Game" section.\nThe defender decides if From the left or from the right.
+
 # Labels
 
 # Other controls
