Timer, Round Counter, Client improved, Chat in Main etc.

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -23,6 +23,18 @@ usermenu.menu.file=Datei
 usermenu.menu.file.exit=Ende
 program.menu.help.tutorial=Einführung
 
+#Main Button
+program.btn.btnSend=Senden
+program.btn.btnStartTimer=Start
+
+#Main Label
+program.lbl.lblUser1=Spieler 1
+program.lbl.lblUser2=Spieler 2
+program.lbl.lblPointsUser1=Punkte Spieler 1
+program.lbl.lblPointsUser2=Punkte Spieler 2
+program.lbl.lblTimer=Zeit in Minuten
+program.lbl.lblRound=Runde
+
 #AI Menu
 AI.menu.file=Datei
 AI.menu.file.exit=Ende
