--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -23,6 +23,18 @@ usermenu.menu.file=File
 usermenu.menu.file.exit=Exit
 program.menu.help.tutorial=Tutorial
 
+#Main Button
+program.btn.btnSend=Send
+program.btn.btnStartTimer=Start
+
+#Main Label
+program.lbl.lblUser1=Player 1
+program.lbl.lblUser2=Player 2
+program.lbl.lblPointsUser1=Points Player 1
+program.lbl.lblPointsUser2=Points Player 2
+program.lbl.lblTimer=Timer in Minutes
+program.lbl.lblRound=Round
+
 #AI Menu
 AI.menu.file=File
 AI.menu.file.exit=Exit
