All new also from Robin

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -34,6 +34,7 @@ program.lbl.lblPointsUser1=Punkte Spieler 1
 program.lbl.lblPointsUser2=Punkte Spieler 2
 program.lbl.lblTimer=Zeit in Minuten
 program.lbl.lblRound=Runde
+program.lbl.lblRoundCounter= Rundenzähler
 
 #AI Menu
 AI.menu.file=Datei
