--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -34,6 +34,7 @@ program.lbl.lblPointsUser1=Points Player 1
 program.lbl.lblPointsUser2=Points Player 2
 program.lbl.lblTimer=Timer in Minutes
 program.lbl.lblRound=Round
+program.lbl.lblRoundCounter=Round counter
 
 #AI Menu
 AI.menu.file=File
