Depth is also possible

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -49,6 +49,7 @@ lblWeightMoves=Möglichkeiten Gewichtung:
 lblWeightProgress=Fortschritt Gewichtung:
 lblPlayerONE=Spieler eins
 lblPlayerTWO=Spieler zwei
+lblDepth=Tiefe 
 
 #AI Buttons
 btnSinglePlayer = Einzelspieler
