--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -52,6 +52,7 @@ lblWeightMoves=Moves Weight:
 lblWeightProgress=Progress Weight:
 lblPlayerONE=Player one
 lblPlayerTWO=Player two
+lblDepth=Depth
 
 #AI Buttons
 btnSinglePlayer=Single Player
