Pop Up Window View für linkes oder rechtes auffüllen der Türme

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -36,6 +36,11 @@ program.lbl.lblTimer=Zeit in Minuten
 program.lbl.lblRound=Runde
 program.lbl.lblRoundCounter= Rundenzähler
 
+#New Round Pop Up Window
+lblNewRoundPopUp=In welcher Richtung sollen die Türme aufgefüllt werden?
+btnLeftPlay=Links
+btnRightPlay=Rechts
+
 #AI Menu
 AI.menu.file=Datei
 AI.menu.file.exit=Ende
