--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -36,6 +36,11 @@ program.lbl.lblTimer=Timer in Minutes
 program.lbl.lblRound=Round
 program.lbl.lblRoundCounter=Round counter
 
+#New Round Pop Up Window
+lblNewRoundPopUp=What direction shall the towers be ordered?
+btnLeftPlay=Left
+btnRightPlay=Right
+
 #AI Menu
 AI.menu.file=File
 AI.menu.file.exit=Exit
