# WARNING: head commit changed in the meantime
classpath

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -70,6 +70,13 @@ friends.menu.file.exit=Ende
 addfriends.menu.file=Datei
 addfriends.menu.file.exit=Ende
 
+#Buttons
+friends.button.btnAcceptFriendsRequest=Annehmen
+friends.button.btnPlayAgainstFriend=Spielen
+friends.button.btnRemoveFriend=Entfernen
+friends.button.btnRefuseFriendsRequest=Ablehnen
+friends.button.btnAddFriend=Freunde hinzufügen
+
 #Lobby
 lobby.menu.file=Datei
 lobby.menu.file.exit=Ende
