--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -70,6 +70,13 @@ friends.menu.file.exit=Exit
 addfriends.menu.file=File
 addfriends.menu.file.exit=Exit
 
+#Buttons
+friends.button.btnAcceptFriendsRequest=Accept
+friends.button.btnPlayAgainstFriend=Play
+friends.button.btnRemoveFriend=Remove
+friends.button.btnRefuseFriendsRequest=Refuse
+friends.button.btnAddFriend=Add Friends
+
 #Lobby
 lobby.menu.file=File
 lobby.menu.file.exit=Exit
