--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -95,7 +95,11 @@ mainmenu.menu.file=Datei
 mainmenu.menu.file.exit=Ende
 
 #MainMenu Button
-btnStartGame=Spiel starten
+btnSingleGame=Einzelspiel
+btnStandardGame=Normales Spiel
+btnLongGame=Langes Spiel
+btnMarathonGame=Marathon Spiel
+btnFriends=Freunde
 
 #UserMenu
 menuFileUserMenu=Datei
