--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -95,7 +95,11 @@ mainmenu.menu.file=File
 mainmenu.menu.file.exit=Exit
 
 #MainMenu Button
-btnStartGame=Start Game
+btnSingleGame=Single Game
+btnStandardGame=Standard Game
+btnLongGame=Long Game
+btnMarathonGame=Marathon Game
+btnFriends=Friends
 
 #UserMenu
 menuFileUserMenu=File
