Forgotten the Text for the Button

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -89,6 +89,7 @@ login.menu.file.exit=Ende
 btnLogin=Einloggen
 btnUserMenu=Spieler Menu
 btnRefresh=Aktualisieren
+btnWithoutServer=Ohne Server
 
 #MainMenu
 mainmenu.menu.file=Datei
