--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -89,6 +89,7 @@ login.menu.file.exit=Exit
 btnLogin=Login
 btnUserMenu=User Menu
 btnRefresh=Refresh
+btnWithoutServer=Without Server
 
 #MainMenu
 mainmenu.menu.file=File
