Exit from Main-Menu is now possible

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -101,6 +101,7 @@ btnStandardGame=Normales Spiel
 btnLongGame=Langes Spiel
 btnMarathonGame=Marathon Spiel
 btnFriends=Freunde
+btnEnd=Spiel beenden
 
 #UserMenu
 menuFileUserMenu=Datei
