--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -101,6 +101,7 @@ btnStandardGame=Standard Game
 btnLongGame=Long Game
 btnMarathonGame=Marathon Game
 btnFriends=Friends
+btnEnd=End Game
 
 #UserMenu
 menuFileUserMenu=File
