Some Beatuy-Things

--- a/Client/WindChuckers_Main/WindChuckers_de.properties
+++ b/Client/WindChuckers_Main/WindChuckers_de.properties
@@ -166,6 +166,10 @@ lblHeaderMarathon=Marathon Spiel
 sBodyMarathon1=Gewinner des Marathon-Spiels ist, wer als erster 15 Punkte erreicht.\nDas Spiel verläuft nach den Grundregeln. Ab dem Ende der ersten Partie gelten zwei wichtige Änderungen:
 sBodyMarathon2=Bekommt ein Doppel-Sumo (siehe auch Das Lange Spiel) wird zum Dreifach-Sumo\nwenn er einen weiteren Drachenzahn-Marker erhält.\n\nEs gelten die Regeln wie im Abschnitt "Das Standard Spiel" beschrieben.\nDer Verteigier entscheidet, ob von links oder von rechts besetzt werden muss.
 
+#Help about
+HelpAboutTitle=Kamisado
+HelpAboutHeader=WindChucker's Kamisado
+HelpAboutMessage=Version 1.0\n\n\nErsteller:\n\n- Lukas Weber\n- Cyrill Füglister\n- Lukas Kunz\n- Robin Lehner\n- Thomas Bosshard
 
 # Buttons
 
