--- a/Client/WindChuckers_Main/WindChuckers_en.properties
+++ b/Client/WindChuckers_Main/WindChuckers_en.properties
@@ -166,6 +166,11 @@ lblHeaderMarathon=Marathon Play
 sBodyMarathon1=The winner of the marathon game is the first to score 15 points.\nThe game goes according to the basic rules. From the end of the first game there are two important changes:
 sBodyMarathon2=If the double-sumo is added to the Triple-Sumo, it will be added to the Triple-Sumo.\n\nThere are rules as described in the "Standard Game" section.\nThe defender decides if From the left or from the right.
 
+#Help about
+HelpAboutTitle=Kamisado
+HelpAboutHeader=WindChucker's Kamisado
+HelpAboutMessage=Version 1.0\n\n\nCreators:\n\n- Lukas Weber\n- Cyrill Füglister\n- Lukas Kunz\n- Robin Lehner\n- Thomas Bosshard
+
 # Labels
 
 # Other controls
